--- a/package.json
+++ b/package.json
@@ -9,16 +9,17 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@google/genai": "^1.36.0",
+    "@supabase/supabase-js": "^2.91.0",
+    "clsx": "^2.1.1",
+    "framer-motion": "^11.13.1",
+    "lucide-react": "^0.562.0",
+    "pdfjs-dist": "^4.10.38",
     "react": "^19.2.3",
     "react-dom": "^19.2.3",
-    "@google/genai": "^1.36.0",
-    "xlsx": "^0.18.5",
-    "lucide-react": "^0.562.0",
     "recharts": "^3.6.0",
-    "framer-motion": "^11.13.1",
-    "clsx": "^2.1.1",
     "tailwind-merge": "^2.5.4",
-    "@supabase/supabase-js": "^2.91.0"
+    "xlsx": "^0.18.5"
   },
   "devDependencies": {
     "@types/node": "^22.14.0",
